--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Workday2GCal",
+  "name": "Workday to Google Calendar",
   "icons": [
     {
       "src": "favicon.ico",
